@@ -5,10 +5,11 @@
 
 
     <epp:phrase id="mail_sig">
-<hr/>
-<p><epc:phrase ref="archive_name" /><br/>
+<div style='display: none'><hr /></div>
+<p style='padding: 0.5em; background-color: #eee; border-top: solid 2px #999; font-size: 90%'>
+<epc:phrase ref="archive_name" /><br/>
 <a href="{$config{frontpage}}"><epc:print expr="$config{frontpage}" /></a><br/>
-<a href="mailto:{$config{adminemail}}"><epc:print expr="$config{adminemail}" /></a>
+Contact us at <a href="mailto:{$config{adminemail}}"><epc:print expr="$config{adminemail}" /></a>
 </p>
     </epp:phrase>
 
